fix visibility of upgrades with blueprints in tech tree

--- a/css/main.less
+++ b/css/main.less
@@ -90,7 +90,11 @@ h2:first-child {
     margin-top: 0.5em;
 }
 
-h3 {
+h3, h4 {
+    margin: 1em 0 0.5em 0;
+}
+
+h4 {
     margin: 1em 0 0.5em 0;
 }
 
